# fast-chat

./: .dockerignore  .env.example  .gitignore  README.md  SPEC.md  docker-compose.yml
chat-api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
chat-api/src/: main.py
chat-api/src/db/: engine.py  models.py
chat-api/src/routers/: admin.py  chat.py  files.py  models.py  responses.py  search.py
chat-api/src/services/: errors.py  file_processor.py  http_client.py  model_policy.py  model_registry.py  observability.py  request_context.py  title_generator.py  tokens.py
chat-app/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  langgraph.json  mcp_servers.json  pyproject.toml
chat-app/prompts/: code_interpreter_agent.md  knowledge_base_agent.md  websearch_agent.md
chat-app/src/chat_app/: __init__.py  api.py  config.py  error_handlers.py  human_in_the_loop.py  memory.py  redis_helper.py  retry_policies.py  state.py  state_validation.py  status_streaming.py  summarization.py
chat-app/src/chat_app/agents/: __init__.py  agents.py
chat-app/src/chat_app/graphs/: app.py  supervisor.py
chat-app/src/chat_app/services/: __init__.py  a2a_registry.py  bff_client.py  graph_registry.py  llm_factory.py  mcp_client.py  mcp_registry.py  runtime_config.py
chat-app/src/chat_app/tools/: __init__.py  agent_delegation.py  rag_tool.py  tools.py  workspace_file_tools.py
chat-app/src/chat_app/utils/: __init__.py  file_context.py  messages.py  perplexity_client.py
chat-ui/: .dockerignore  .env.example  Dockerfile  README.md  app.py  pyproject.toml
chat-ui/.chainlit/: config.toml
chat-ui/public/: theme.json
docproc/: .gitignore  README.md  pyproject.toml
docproc/docproc/: __init__.py  config.py
docproc/docproc/services/: document_store.py  file_processor.py  multimodal_extractor.py  summarization.py
docproc/docproc/utils/: file_helpers.py  image_utils.py  llm_config.py  vector_store.py
docs/: durable.md  interrupt.md  memory.md  peristence.md  streaming.md  thinking.md  workflows_and_agents.md
tests/: e2e_multimodal_test.py  e2e_rag_test.py  e2e_test.py  test_admin_control_plane_contract.py  test_chat_app_llm_factory.py  test_chat_router_fallback_contract.py  test_llm_config_enterprise_policy.py  test_mcp_tool_integration.py  test_model_policy.py  test_model_registry_fallback.py  test_real_platform_e2e.py  test_registry_controls.py  test_request_context_policy.py  test_stream_options_contract.py  test_vector_store_adapter.py
tests/fixtures/: mcp_test_server.py
