[project]
name = "chat-api"
version = "0.1.0"
description = "OpenAI-compatible API for Fast-Chat"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "anyio>=4.0.0"
]
