[project]
name = "chat-api"
version = "0.1.0"
description = "OpenAI-compatible API for Fast-Chat"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    
    # Database
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    
    # HTTP client
    "httpx>=0.27.0",
    
    # File handling
    "python-multipart>=0.0.12",
    "aiofiles>=24.1.0",
    
    # Configuration & validation
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    
    # Token counting (accurate OpenAI token estimation)
    "tiktoken>=0.8.0",
    
    # Logging
    "structlog>=24.4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "anyio>=4.0.0",
    "ruff>=0.8.0",
]
